--- a/index.html
+++ b/index.html
@@ -106,35 +106,35 @@
 				</div>
 				<h3>Product</h3>
 				<p>
-					Als eindproduct voor de VR challenge heb ik een 360&#176 VR illustatie gemaakt. Het is een illustratie van een boomhutten burgt, de boomhutten zijn overal om je heen te zien in de hoge bomen van het bos.
+					Als eindproduct voor de VR challenge heb ik een 360&#176 VR illustratie gemaakt. Het is een illustratie van een boomhuttenburcht, de boomhutten zijn overal om je heen te zien in de hoge bomen van het bos.
 				</p>
 				<p>
-					In mijn vrije tijd teken ik graag. Daarmee is dit eindproduct begonnen. Een begin van de boomhutten tekening had ik al eerder gemaakt, hier ben ik vele dagen mee bezig geweest. De tekening heeft een raar formaat omdat ik graag een vr panorama tekening wilde maken. Dit is mij nooit gelukt, omdat ik niet genoeg kennis van panorama's, 360&#176 foto's, 3D en VR had. Maar nu ik hier veel over geleerd had, wilde ik het nog eens proberen. En ik ben nog een stap verder gegaan: ik wilde van de illustatie geen panorama, maar een 360&#176 VR experence maken.
+					In mijn vrije tijd teken ik graag. Daarmee is dit eindproduct begonnen. Een begin van de boomhuttentekening had ik al eerder gemaakt, hier ben ik vele dagen mee bezig geweest. De tekening heeft een raar formaat omdat ik graag een VR panorama tekening wilde maken. Dit is mij nooit gelukt, omdat ik niet genoeg kennis van panorama's, 360&#176 foto's, 3D en VR had. Maar nu ik hier veel over geleerd had, wilde ik het nog eens proberen. En ik ben nog een stap verder gegaan: ik wilde van de illustratie geen panorama, maar een 360&#176 VR experience maken.
 				</p>
 				<img src="media/boomhut (1).jpg" class="groot"/>
 				<p>
-					Om te beginnen heb ik de oorspronkelijke tekening in photshop geopent om te kijken hoe de tekin er in VR uit zou zien. Hiervoor had ik er al voor gezogt dat de tekenig naadloos sluit door het begin van de tekeign te beruiken aan het eide van de andere kant. In Photoshop maakte ik van de teking een 'bolvormig panorama'. Het midden van de tekig zag er nog redelijk uit, maar toen ik naar boven en beneden keek zag ik de de grond en de lucht helmaal vervormt waren. Ik moest een ondergond en lucht toevoegen aan de tekening, zodat het een 360&# illustatie werd en geen panorama.
+					Om te beginnen heb ik de oorspronkelijke tekening in Photoshop geopend om te kijken hoe de tekening er in VR uit zou zien. Hiervoor had ik er al voor gezorgd dat de tekening naadloos sluit door het begin van de tekening te beruiken aan het einde van de andere kant. In Photoshop maakte ik van de tekening een 'bolvormig panorama'. Het midden van de tekening zag er nog redelijk uit, maar toen ik naar boven en beneden keek zag ik dat de grond en de lucht helemaal vervormd waren. Ik moest een ondergrond en lucht toevoegen aan de tekening, zodat het een 360&# illustratie werd en geen panorama.
 				</p>
 				<div class="galerij">
 					<img src="media/boomhut (2).png"/>
 					<img src="media/boomhut (3).png"/>
 				</div>
 				<p>
-					Ik kon niet zomaar de gond en de lucht toevogen aan de tekening. Dit komt omdat een tekening in 360&# word vervormd. Er word gebruik gemaakt van een 'Equirectangular Image'. Zo'n vervorming komt voor wanneer je een 3d omgeving in 2d wilt weergeven. Op kaarden van de wereld zie je deze vervoming ook terugkomen, de kaarten zijn equirectangulaire afbeelingen. Om te begrijpen hoe ik in equirectangular perspectief kon tekenen heb ik gebruik gemaakt van een equirectangular grid. Hierop zie je duidelijk hoe de lijnen worden vervormd. Alle lijnen in de grid, zie je in VR als rechte lijnen.
+					Ik kon niet zomaar de grond en de lucht toevoegen aan de tekening. Dit komt omdat een tekening in 360&# wordt vervormd. Er wordt gebruik gemaakt van een 'Equirectangular Image'. Zo'n vervorming komt voor wanneer je een 3d omgeving in 2d wilt weergeven. Op kaarten van de wereld zie je deze vervoming ook terugkomen, de kaarten zijn equirectangulaire afbeeldingen. Om te begrijpen hoe ik in equirectangular perspectief kon tekenen, heb ik gebruik gemaakt van een equirectangular grid. Hierop zie je duidelijk hoe de lijnen worden vervormd. Alle lijnen in de grid, zie je in VR als rechte lijnen.
 				</p>
 				<div class="galerij">
 					<img src="media/boomhut (4).jpg"/>
 					<img src="media/boomhut (5).jpg"/>
 				</div>
 				<p>
-					In Photoshop kan de de 'spherical map' van je afbeeling laden, hier zie je de equirectangulaire afbeeling. Wisslend tussen de 3d weergave en de spherical map heb ik een snelle schets gemaakt van hoe de lijnen er ongeveer uit moeten zien op de spherical map van de illusrtaie. Deze schets moest ik volgen om de lucht en de grond er op de juste wijze uit te laten zien in VR.
+					In Photoshop kan  de 'spherical map' van je afbeelding laden, hier zie je de equirectangulaire afbeelding. Wisselend tussen de 3d weergave en de spherical map heb ik een snelle schets gemaakt van hoe de lijnen er ongeveer uit moeten zien op de spherical map van de illustratie. Deze schets moest ik volgen om de lucht en de grond er op de juste wijze uit te laten zien in VR.
 				</p>
 				<div class="galerij">
 					<img src="media/boomhut (6).png"/>
 					<img src="media/boomhut (7).png"/>
 				</div>
 				<p>
-					Nu kon het tekenen beginnen! In het teken progmma Sketshbook heb ik de lucht en de grond vervormd getekend. En na een paar keer testen en aanpassen is het me gelukt om de lucht en grond juist weer te geven.
+					Nu kon het tekenen beginnen! In het tekenprogmma SketchBook heb ik de lucht en de grond vervormd getekend. En na een paar keer testen en aanpassen is het me gelukt om de lucht en grond juist weer te geven.
 				</p>
 				<div class="galerij">
 					<img src="media/boomhut (8).jpg" class="groot"/>
@@ -145,18 +145,18 @@
 				</div>
 				</div>
 				<p>
-					Om de illustatie te testen heb ik de illustaie in de VR bril bekeken met een VR media player app en geupload naar momento360.com om de VR illustratie op deze website te kunnen laten zien.
+					Om de illustratie te testen heb ik de illustratie in de VR bril bekeken met een VR media player app en geüpload naar momento360.com om de VR illustratie op deze website te kunnen laten zien.
 				</p>
 				<p>
-					Hier onder staat het definive product. Je kan zelf rond kijken door je muis over de afbeelding te slepen. Geniet van de natuur, de verschillende bomen en boomhutten en de kleinde details.
+					Hier onder staat het definitieve product. Je kunt zelf rond kijken door je muis over de afbeelding te slepen. Geniet van de natuur, de verschillende bomen en boomhutten en de kleinde details.
 				</p>
 				<iframe allowfullscreen="false" src="https://momento360.com/e/u/ba18955ab2434e3f8d4750a0d39dd8c5?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=69.76666666666668" id="boomhut"></iframe>
 				<h3>Reflectie</h3>
 				<p>
-					Ik ben positief verrast door de mogelijkheden van VR en AR. Voor dit vak had ik VR en AR wel eens uitgeprobeerd, maar ik dacht dat het een nieuwe technologie was die nog niet echt mainstreem gebruikt werd. Dit bleek helmaal niet waar te zijn. Ik ben erachter gekomen dat er al veel toepassijgen zijn voor VR en AR en dat je zelf ook al met VR of AR kan werken. Dit kan met een progamma zoals unreal engine. Dit progmaa vond ik er eerst ingewikkeld uit zien, maar bleek uiteindelijk logisch in elkaar te zitten. Tot slot heb ik kennis gemaakt met 3d design. Ik had nog geen idee wat de moeglijkhededen hiermee waren, maar in de toekomst ga ik progamma's zoals Adobe Dimnsion zeker vaker gebruiken.
+					Ik ben positief verrast door de mogelijkheden van VR en AR. Voor dit vak had ik VR en AR wel eens uitgeprobeerd, maar ik dacht dat het een nieuwe technologie was die nog niet echt mainstream gebruikt werd. Dit bleek helmaal niet waar te zijn. Ik ben erachter gekomen dat er al veel toepassingen zijn voor VR en AR en dat je zelf ook al met VR of AR kan werken. Dit kan met een progamma zoals unreal engine. Dit programma vond ik er eerst ingewikkeld uit zien, maar bleek uiteindelijk logisch in elkaar te zitten. Tot slot heb ik kennis gemaakt met 3d design. Ik had nog geen idee wat de mogelijkhededen hiermee waren, maar in de toekomst ga ik programma's zoals Adobe Dimension zeker vaker gebruiken.
 				</p>
 				<p>
-					Als eindproduct heb ik een 360&#176 VR illuystatie gemaakt. Ik vind het bijzonder dat ik dit heb kunnen maken omdat ik het al eerder heb geprobeerd, maar het toen niet lukte. Ik heb deze experence dus kunnen maken met de kennis die ik heb opgedaan in deze challenge. Ik ben erg blij met het eindresultaat omdat het precies is wat ik me oorspronkelijk had voorgesteld toen ik begon met het maken van de tekening.
+					Als eindproduct heb ik een 360&#176 VR illustratie gemaakt. Ik vind het bijzonder dat ik dit heb kunnen maken omdat ik het al eerder heb geprobeerd, maar het toen niet lukte. Ik heb deze experience dus kunnen maken met de kennis die ik heb opgedaan in deze challenge. Ik ben erg blij met het eindresultaat omdat het precies is wat ik me oorspronkelijk had voorgesteld toen ik begon met het maken van de tekening.
 				</p>
 			</article>
 			<a name="wearables"></a>
