--- a/index.html
+++ b/index.html
@@ -153,9 +153,7 @@
 				<iframe allowfullscreen="false" src="https://momento360.com/e/u/ba18955ab2434e3f8d4750a0d39dd8c5?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=69.76666666666668" id="boomhut"></iframe>
 				<h3>Reflectie</h3>
 				<p>
-					Ik ben positief verrast door de mogelijkheden van VR en AR. Voor dit vak had ik VR en AR wel eens uitgeprobeerd, maar ik dacht dat het een nieuwe technologie was die nog niet echt mainstream gebruikt werd. Dit bleek helmaal niet waar te zijn. Ik ben erachter gekomen dat er al veel toepassingen zijn voor VR en AR en dat je zelf ook al met VR of AR kan werken. Dit kan met een progamma zoals unreal engine. Dit programma vond ik er eerst ingewikkeld uit zien, maar bleek uiteindelijk logisch in elkaar te zitten. Tot slot heb ik kennis gemaakt met 3d design. Ik had nog geen idee wat de mogelijkhededen hiermee waren, maar in de toekomst ga ik programma's zoals Adobe Dimension zeker vaker gebruiken.
-				</p>
-				<p>
+					Ik ben positief verrast door de mogelijkheden van VR en AR. Voor dit vak had ik VR en AR wel eens uitgeprobeerd, maar ik dacht dat het een nieuwe technologie was die nog niet echt mainstream gebruikt werd. Dit bleek helmaal niet waar te zijn. Ik ben erachter gekomen dat er al veel toepassingen zijn voor VR en AR en dat je zelf ook al met VR of AR kan werken. Dit kan met een progamma zoals unreal engine. Dit programma vond ik er eerst ingewikkeld uit zien, maar bleek uiteindelijk logisch in elkaar te zitten. Tot slot heb ik kennis gemaakt met 3d design. Ik had nog geen idee wat de mogelijkhededen hiermee waren, maar in de toekomst ga ik programma's zoals Adobe Dimension zeker vaker gebruiken.<br/>
 					Als eindproduct heb ik een 360&#176 VR illustratie gemaakt. Ik vind het bijzonder dat ik dit heb kunnen maken omdat ik het al eerder heb geprobeerd, maar het toen niet lukte. Ik heb deze experience dus kunnen maken met de kennis die ik heb opgedaan in deze challenge. Ik ben erg blij met het eindresultaat omdat het precies is wat ik me oorspronkelijk had voorgesteld toen ik begon met het maken van de tekening.
 				</p>
 			</article>
@@ -163,9 +161,29 @@
 			<article>
 				<h2>Wearables</h2>
 				<h3>Onderzoek</h3>
-				<p></p>
+				<p>Voor deze challenge: wearebles, ben ik begonnen met het vinden van voorbeelden van wearebles om inspiratie op te doen.</p>
+				<p>
+					<a href="https://www.behance.net/gallery/87131391/duo" target="_blank"><b>Duo</b></a><br />
+					<i>Giorgio Bencivenni en Marta de Antoni</i><br />
+					Duo is een wearable die een melding geeft wanneer een persoon in de buurt van bezienswaardigheden komt. Het doet me denken aan een soort reisgids.<br />
+					Ik vind het een leuk idee om een wandeling voor hikers interesanter te maken door meer informatie te geven over hun omgeving. Ik vind dat Duo een opvallend design heeft door de kleur en het relief, wat lijkt op een landschap.
+				</p>
+				<p>
+					<a href="https://www.behance.net/gallery/46014195/Moggie-Smart-Collar-For-Cats-Product-DesignDirection" target="_blank"><b>Moggie</b></a><br />
+					<i>Yuri Lence</i><br />
+					Moggie is een weable voor katten. Het is een halsband die allerlei gegevens over je kat verzameld. De gegvens kan je bekijken in de Moggie app.<br />
+					Deze wearable spreet mij aan omdat het een weareble voor katten is. Hier had ik zelf nog helemaal niet aan gedacht. Ik vind het een interesant idee om gegevens over je kat te verzamelen, maar ik denk dat het alleen nodig zal zijn als de kat oud of ziek is. Er is goed nagedacht over het dagelijkse gebruik van het product, ze hebben het bijvoorbeeld makkelijk gemaakt om halsband te kunnen opladen.
+				</p>
+				<p>
+					<a href="https://www.behance.net/gallery/53617751/Toasty" target="_blank"><b>Toasty</b></a><br />
+					<i>Hyelin Yu</i><br />
+					Toasty is niet alleen een wearable (in de vorm bvan een horloge) maar een multy platform applicatie. Het is een platform voor slimme keukens. Gebruikers kunnen met de app onder andere de keuken bedienen en recepten maken. Toasty gebruik gegevens van o.a de slimme koelkast, kookplaten, de oven, de wearebale en je smartphone.<br />
+					Ik vind dit een spectacular groot en complex project. Je hebt veel slimme apparaten in je keuken nodig om het optimale uit Toasty te halen, maar als je een slimme keuken hebt denk ik dat Toasty erg handig is en fijn is om te gebruiken. De weareble word gebuikt om je keuken te bedienen en om recepten te maken met je stem. Ik denk dat vooral het bedienen van de keuken makkelijk is met de weareble, omdat je alles vanaf een plek kan bedienen en niet door de keuken hoeft rond te rennen.
+				</p>
 				<h3>Experimenteren</h3>
-				<p></p>
+				<p>
+					In de eerste Arduino workshops hebben we verschillende dingen gemaakt met de Ardunion hardware en software <a href="#workshops">zie de workshop Arduino voor de resultaten.</a>
+				</p>
 				<h3>Product</h3>
 				<p></p>
 				<h3>Reflectie</h3>
