--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<h3>Onderzoek</h3>
 				<img src="media/vrbril.jpg" class="klein"/>
 				<p>
-					Om te beginnen met dit onderwerp wilde ik, na het zien van de voorbeelden, zelf eens VR meemaken. AR heb ik vaker gezien (o.a. Pokemon Go en Snapchat), dus ik was heet meest nieuwschierig naar VR.
+					Om te beginnen met dit onderwerp wilde ik, na het zien van de voorbeelden, zelf eens VR meemaken. AR heb ik vaker gezien (o.a. Pokemon Go en Snapchat), dus ik was het meest nieuwschierig naar VR.
 					Ik heb een VR bril die ik ben gaan testen door een paar VR 360&#176 filmpjes te bekijken op YouTube. Dit was erg leuk, ik vond vooral de reisfilmpjes leuk waarin je bijvoorbeeld <a href="https://youtu.be/lJype_TafRk" target="_blank">rond kon kijken in Australië.</a> Ook heb ik een VR film gevonden met geanimeerde beestjes. Ik vond het leuk dat dit een VR experience met een verhaallijn was.
 				</p>
 				<p>
@@ -109,18 +109,18 @@
 					Als eindproduct voor de VR challenge heb ik een 360&#176 VR illustratie gemaakt. Het is een illustratie van een boomhuttenburcht, de boomhutten zijn overal om je heen te zien in de hoge bomen van het bos.
 				</p>
 				<p>
-					In mijn vrije tijd teken ik graag. Daarmee is dit eindproduct begonnen. Een begin van de boomhuttentekening had ik al eerder gemaakt, hier ben ik vele dagen mee bezig geweest. De tekening heeft een raar formaat omdat ik graag een VR panorama tekening wilde maken. Dit is mij nooit gelukt, omdat ik niet genoeg kennis van panorama's, 360&#176 foto's, 3D en VR had. Maar nu ik hier veel over geleerd had, wilde ik het nog eens proberen. En ik ben nog een stap verder gegaan: ik wilde van de illustratie geen panorama, maar een 360&#176 VR experience maken.
+					In mijn vrije tijd teken ik graag. Daarmee is dit eindproduct begonnen. Een begin van de boomhuttentekening had ik al eerder gemaakt, hier ben ik vele dagen mee bezig geweest. De tekening heeft een raar formaat omdat ik graag een panorama tekening wilde maken. Dit is mij nooit gelukt, omdat ik niet genoeg kennis van panorama's, 360&#176 foto's, 3D en VR had. Maar nu ik hier veel over geleerd had, wilde ik het nog eens proberen. En ik ben nog een stap verder gegaan: ik wilde van de illustratie geen panorama, maar een 360&#176 VR experience maken.
 				</p>
 				<img src="media/boomhut (1).jpg" class="groot"/>
 				<p>
-					Om te beginnen heb ik de oorspronkelijke tekening in Photoshop geopend om te kijken hoe de tekening er in VR uit zou zien. Hiervoor had ik er al voor gezorgd dat de tekening naadloos sluit door het begin van de tekening te beruiken aan het einde van de andere kant. In Photoshop maakte ik van de tekening een 'bolvormig panorama'. Het midden van de tekening zag er nog redelijk uit, maar toen ik naar boven en beneden keek zag ik dat de grond en de lucht helemaal vervormd waren. Ik moest een ondergrond en lucht toevoegen aan de tekening, zodat het een 360&# illustratie werd en geen panorama.
+					Om te beginnen heb ik de oorspronkelijke tekening in Photoshop geopend om te kijken hoe de tekening er in VR uit zou zien. Hiervoor had ik er al voor gezorgd dat de tekening naadloos sluit door het begin van de tekening te gebruiken aan het einde van de andere kant. In Photoshop maakte ik van de tekening een 'bolvormig panorama'. Het midden van de tekening zag er nog redelijk uit, maar toen ik naar boven en beneden keek zag ik dat de grond en de lucht helemaal vervormd waren. Ik moest een ondergrond en lucht toevoegen aan de tekening, zodat het een 360&#176 illustratie werd en geen panorama.
 				</p>
 				<div class="galerij">
 					<img src="media/boomhut (2).png"/>
 					<img src="media/boomhut (3).png"/>
 				</div>
 				<p>
-					Ik kon niet zomaar de grond en de lucht toevoegen aan de tekening. Dit komt omdat een tekening in 360&# wordt vervormd. Er wordt gebruik gemaakt van een 'Equirectangular Image'. Zo'n vervorming komt voor wanneer je een 3d omgeving in 2d wilt weergeven. Op kaarten van de wereld zie je deze vervoming ook terugkomen, de kaarten zijn equirectangulaire afbeeldingen. Om te begrijpen hoe ik in equirectangular perspectief kon tekenen, heb ik gebruik gemaakt van een equirectangular grid. Hierop zie je duidelijk hoe de lijnen worden vervormd. Alle lijnen in de grid, zie je in VR als rechte lijnen.
+					Ik kon niet zomaar de grond en de lucht toevoegen aan de tekening. Dit komt omdat een tekening in 360&#176 wordt vervormd. Er wordt gebruik gemaakt van een 'Equirectangular Image'. Zo'n vervorming komt voor wanneer je een 3d omgeving in 2d wilt weergeven. Op kaarten van de wereld zie je deze vervoming ook terugkomen, de kaarten zijn equirectangulaire afbeeldingen. Om te begrijpen hoe ik in equirectangular perspectief kon tekenen, heb ik gebruik gemaakt van een equirectangular grid. Hierop zie je duidelijk hoe de lijnen worden vervormd. Alle lijnen in de grid, zie je in VR als rechte lijnen.
 				</p>
 				<div class="galerij">
 					<img src="media/boomhut (4).jpg"/>
