--- a/index.html
+++ b/index.html
@@ -182,8 +182,12 @@
 				</p>
 				<h3>Experimenteren</h3>
 				<p>
-					In de eerste Arduino workshops hebben we verschillende dingen gemaakt met de Ardunion hardware en software <a href="#workshops">zie de workshop Arduino voor de resultaten.</a>
+					In de Arduino workshops hebben we verschillende dingen gemaakt met de Ardunion hardware en software <a href="#workshops">zie de workshop Arduino voor de resultaten.</a>
 				</p>
+				<p>
+					Toen ik wat kennis had over de mogelijkheden van Arduino en inspiratie had opgedaan door het onderzoek, ben ik gaan brainstormen. Hier zijn drie concepten uit gekomen die op de afbeelding te zien zijn.
+				</p>
+				<img src="media/wearables schetsen.jpg" class="groot" />
 				<h3>Product</h3>
 				<p></p>
 				<h3>Reflectie</h3>
@@ -279,8 +283,30 @@
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
 					<img src="media/workshop_arduino (12).png"/>
-					<video controls>
+					<video controls class="verticaal">
 						<source src="media/workshop_arduino (13).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (14).png"/>
+					<video controls class="verticaal">
+						<source src="media/workshop_arduino (15).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (16).png"/>
+					<video controls class="verticaal">
+						<source src="media/workshop_arduino (17).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (18).png"/>
+					<img src="media/workshop_arduino (19).jpg"/>
+					<video controls class="verticaal">
+						<source src="media/workshop_arduino (20).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (21).png"/>
+					<img src="media/workshop_arduino (22).jpg"/>
+					<video controls>
+						<source src="media/workshop_arduino (23).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
 				</div>
