--- a/index.html
+++ b/index.html
@@ -136,13 +136,11 @@
 				<p>
 					Nu kon het tekenen beginnen! In het tekenprogmma SketchBook heb ik de lucht en de grond vervormd getekend. En na een paar keer testen en aanpassen is het me gelukt om de lucht en grond juist weer te geven.
 				</p>
+				<img src="media/boomhut (8).jpg" class="groot"/>
 				<div class="galerij">
-					<img src="media/boomhut (8).jpg" class="groot"/>
-					<div class="galerij">
 					<img src="media/boomhut (8).png"/>
 					<img src="media/boomhut (9).png"/>
 					<img src="media/boomhut (10).png"/>
-				</div>
 				</div>
 				<p>
 					Om de illustratie te testen heb ik de illustratie in de VR bril bekeken met een VR media player app en geüpload naar momento360.com om de VR illustratie op deze website te kunnen laten zien.
@@ -188,8 +186,58 @@
 					Toen ik wat kennis had over de mogelijkheden van Arduino en inspiratie had opgedaan door het onderzoek, ben ik gaan brainstormen. Hier zijn drie concepten uit gekomen die op de afbeelding te zien zijn.
 				</p>
 				<img src="media/wearables schetsen.jpg" class="groot" />
+				<p>
+					Voor de Oven Sensor zou ik de NTC termistor (temperatuursensor) gebruiken. Ik wist alleen niet zeker of deze sensor tegen hoge temperaturen zou kunnen. Dit ben ik gaan opzoeken. De sensor kan teken temperaturen tussen de -30 en 124 graden celcius. Mijn oven kan wel 250 graden celcius worden, dus dit kan de sensor helaas niet aan. Hierdoor bleven er twee concepten over.<br />
+					Ik heb voor de lichtgevende oren gekozen omdat dat echt een wearable is. Een wekker zoals het koffie alarm kan ook als los product gebrukt worden. De oren zijn alleen functioneel als je ze draagt.
+				</p>
 				<h3>Product</h3>
-				<p></p>
+				<p>
+					Ik had een duidelijk concept voor ogen, nu was het tijd om het concept uit te werken en een werkend prototype te realiseren.
+				</p>
+				<img src="media/kattenoren (1).jpg" class="klein"/>
+				<p>
+					Voordat ik een eerste prototype ging maken heb ik een kleine schets gemaakt van de stoomdraden. Ik ging lampjes gebruiken. Voor de lampjes heb je een draad nodig die stoom levert, een weerstandje en een draad die de stroom weer afvoert. Ik heb nog gekeken of ik de twee lampjes nog combineren waardoor ik minder draden nodig zou hebben. Maar dit heb ik uit iendelijk niet gedaan omdat de lampjes niet op een bord maar aan de losse draden vast zouden zitten. Hierdoor was het lasig om de lampjes aan meerdere draden en aan elkaar te koppelen.
+				</p>
+				<p>
+					Ik heb toen de code geschreven en een eerste prototype gemaakt. Het ging hier alleen om het stroomcircuit, nog niet om het design. Ik moest weten of de lampjes zouden werken op de maier die ik voor ogen had. Ik sloot alles draden op de arduino aan, maakte de lamojes en draden vast aan de Arduino en uploadde de code, maar helaast gebeurde er niets. De lampjes gingen niet branden. Zelf nadat ik alles nog een keerd had gechecht werkte het niet.
+				</p>
+				<div class="galerij">
+					<img src="media/kattenoren (2).png"/>
+					<img src="media/kattenoren (3).jpg"/>
+				</div>
+				<p>
+					Om er achter te komen waaom het niet werkte heb ik het prototype nog een keer gemaakt, maar dan op het bord. Ik had namelijk gemerkt dat de lampjes erg los aan elkaar zaten met plakband. Ik dacht dat de lapjes mischien niet brandde omdat de stoom er niet goed doorheen kon. Na en test bleek dit te kloppen, de zelfde opstelling werkte wel op het bord!
+				</p>
+				<div class="galerij">
+					<img src="media/kattenoren (4).jpg"/>
+				</div>
+				<p>
+					Om een goed werkend prototype te kunnen maken moest ik dus zorgen dat er goed contact was tussen de stroom draden. Ik begon weer aan het prototype. Om te zorgen dat alle draden goed aan elkaar zaten en bleven zitten (vooral het contact tussen de lampjes en de weerstandijes werkte vaak niet) heb ik draden met 'krokodillenbekjes' gebruikt. Deze draden hadden we toevallig op zolder liggen. Met de nieuwe draden was het contact maken tussen de lampjes en de Arduino een stuk makkelijker geworden. Het lukte deze keer wek om de lampjes aan losse draden te laten branden.
+				</p>
+				<p>
+					Nu de lampjes werkte kon ik verder met de rest van het product. Ik verzamelde de spullen: een diadeem, plakband, een schaar en doorzichtig papier. De lampjes met de draden wikkelde ik voorzicht in schilderstape, zodat dit niet uit ekaar zou vallen als ik het aan de diadeem vastmaakte. Na een paar pogingen waarin de draden toch los kwamen te zitten lukte dit. Vervolgens maakte ik de in tape gewikkelde lamjes aan de diadeem vast.<br />
+					Ik had twee soorten doorzichtig materiaal. Ik had dorzichtig plastig en mat roze doorzichtig papier. Eerst wilde ik het doorzichtige plastig gebruiken, maar toen bedacht ik me dat je de oren dan waarschijn niet goed kon zien en heb ik voor het roze paier gekozen. Uitv het papier knipte ik twee oren, die ik om de lapjes heen vouwde en vastmaakte. 
+				</p>
+				<div class="galerij">
+					<img src="media/kattenoren (5).jpg"/>
+					<img src="media/kattenoren (6).jpg"/>
+					<img src="media/kattenoren (7).jpg"/>
+					<video controls>
+						<source src="media/kattenoren (8).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+				</div>
+				<p>
+					Ik had het prototype gemaakt en soot het aan op de laptop. Het werkte! Ik verbond toen een powerbank aan de arduino zodat ik de diadeem op mijn hoof kon zetten. Hier onder is het eindresultaat te zien.
+				</p>
+				<div class="galerij">
+					<img src="media/kattenoren (9).jpg"/>
+					<img src="media/kattenoren (10).jpg"/>
+					<video controls class="verticaal">
+						<source src="media/kattenoren (11).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+				</div>
 				<h3>Reflectie</h3>
 				<p></p>
 			</article>
