--- a/index.html
+++ b/index.html
@@ -239,7 +239,11 @@
 					</video>
 				</div>
 				<h3>Reflectie</h3>
-				<p></p>
+				<p>
+					Ik denk dat werables in de toekoms steeds meer gebruikt gaan worden. Vooral kleine dingetjes zoals het verwarem van een jas, pizza kunnen bestellen met je schoen en lichtgevende kledinbgstukken lijken mij erg handig, en vrij makkelijk te maken met de technologie die nu beschibaar is. Het verbaast me eigenlijk dat we wearables nog zo weinig tegenkomen. <br />
+					Het is me tijdens mijn ondrzoek opgevallen dat wearebles vaak in combinatie gebruikt worden met andere apparaten zoals bij het project Toasty. De weables verzenden dan bijvoorbeeld gegevens naar je telefoon. Ik denk dat wearbles steeds meer producten op zichzelf worden omdat dit gebruiksvriendelijker is en steeds ingewikkeldere techonogie op een kleiner oppervlak past.<br />
+					Ik ben blij met mijn eindproduct. Ik wilde heel graag een werkend prototype maken en niet allen een concept hebben. Daarom heb ik mijn concept ook redelijk simpel gehouden, zodat ik het ver kon uitwerken. Ik ben tevreden met het eindresultaat, vooral omdat het echt werkte en ik het zelfs op mijn hoofd kon dragen. Nu ik nog meer kennis heb opgedaan met Arduino denk ik dat ik een ingewikkelder product zou kunnen maken. Ik merkte dat de hardware mij wel beperte, ik ben niet zo handig mee. De Arduino opdrachten vond ik best lasig. Hier ben ik zeker een aantal dagen mee bezig geweest. Alles is uiteinde wel helmaal gelukt, dus daar ben ik erg blij mee.
+				</p>
 			</article>
 			<a name="creatures"></a>
 			<article>
@@ -335,6 +339,8 @@
 						<source src="media/workshop_arduino (13).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
+				</div>
+				<div class="galerij">
 					<img src="media/workshop_arduino (14).png"/>
 					<video controls class="verticaal">
 						<source src="media/workshop_arduino (15).mp4" type="video/mp4">
@@ -358,8 +364,46 @@
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
 				</div>
+				<div class="galerij">
+					<img src="media/workshop_arduino (25).png"/>
+					<video controls>
+						<source src="media/workshop_arduino (26).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (27).png"/>
+					<video controls class="verticaal">
+						<source src="media/workshop_arduino (28).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (29).png"/>
+					<video controls>
+						<source src="media/workshop_arduino (30).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (31).png"/>
+					<img src="media/workshop_arduino (32).jpg"/>
+					<video controls class="verticaal">
+						<source src="media/workshop_arduino (33).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+				</div>
 				<h3>CV</h3>
-				<p></p>
+				<div class="galerij">
+					<img src="media/workshop_processing (1).png"/>
+					<img src="media/workshop_processing (2).png"/>
+					<img src="media/workshop_processing (3).png"/>
+					<video controls>
+						<source src="media/workshop_processing (4).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_processing (5).png"/>
+					<img src="media/workshop_processing (6).png"/>
+					<img src="media/workshop_processing (7).png"/>
+					<video controls class="verticaal">
+						<source src="media/workshop_processing (8).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+				</div>
 			</article>
 			<a name="gastcollege"></a>
 			<article>
